--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,3 +37,51 @@ body {
     height: 100vh;
 }
 
+.account-left {
+    width: 70%;
+    background-image: linear-gradient(to right bottom, rgba(40, 180, 133, .90) 50%, transparent 50%), url(../img/account-bgc.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+.account-text {
+    position: absolute;
+    top: 20%;
+    left: 40%;
+    transform: translate(-50%, -50%);
+    font-size: 1.5rem;
+    color: var(--color-white);
+}
+
+.account-right {
+    width: 30%;
+    position: relative;
+}
+
+.form-area {
+    width: 80%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+.group {
+    margin-bottom: 1.5rem;
+}
+
+.control {
+    width: 100%;
+    display: block;
+    padding: 1.1rem 1rem;
+    border-radius: 3px;
+    border: 1px solid var(--color-silver);
+    transition: all 1s;
+}
+
+.control:focus {
+    outline: none;
+    border: 1px solid var(--color-green-dark);
+}
