--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,3 +85,28 @@ body {
     outline: none;
     border: 1px solid var(--color-green-dark);
 }
+
+.file {
+    display: none;
+}
+
+#file-label {
+    display: block;
+    width: 100%;
+    padding: 1.1rem 1rem;
+    border: 1px solid var(--color-silver);
+    border-radius: 3px;
+    font-size: 1.2rem;
+    text-align: left;
+    overflow: hidden;
+}
+
+.upload-icon {
+    margin-right: 1.5rem;
+    font-size: 1.7rem;
+    color: var(--color-green-dark);
+}
+
+#file-label:hover {
+    cursor: pointer;
+}
