--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -159,3 +159,58 @@ body {
     font-weight: 300;
     padding-top: 1.5rem;
 }
+
+
+/* CHAT AREA DESIGN */
+#nav {
+    width: 100%;
+    height: 10vh;
+    background: linear-gradient(to right, var(--color-green-light), var(--color-green-dark));
+    box-shadow: 0px 1px 3px 1px rgba(0,0,0,0.2);
+    position: relative;
+}
+
+.chat-container {
+    display: flex;
+}
+
+#sidebar {
+    width: 20%;
+    height: 90vh;
+    background-color: var(--color-white);
+    box-shadow: .8rem 0 .6rem -1rem rgba(0,0,0,0.5);
+    position: relative;
+}
+
+#sidebar::before {
+    position: absolute;
+    content: "Profile";
+    width: 100%;
+    height: 10vh;
+    top: -10vh;
+    background: linear-gradient(to right, var(--color-green-light), var(--color-green-dark));
+    box-shadow: 3px -2px 5px 0px rgba(0,0,0,0.2);
+    line-height: 10vh;
+    text-align: center;
+    font-size: 1.5rem;
+    color: var(--color-white);
+}
+
+.left-ul {
+    margin: 3rem 0;
+    padding:0;
+}
+
+.left-ul li {
+    list-style: none;
+}
+
+.left-ul li a {
+    text-decoration: none;
+    display: block;
+    padding: 1.5rem 0;
+    text-align: center;
+    font-size: 1.3rem;
+    color: var(--color-silver-2);
+    position: relative;
+}
