--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -214,3 +214,48 @@ body {
     color: var(--color-silver-2);
     position: relative;
 }
+
+.cool-hover {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background-color: rgba(0,0,0,0.2);
+    transition: all .3s;
+}
+
+.left-ul li:hover .cool-hover {
+    width: 100%;
+}
+
+.profile-img-span {
+    display: block;
+    width: 8rem;
+    height: 8rem;
+    border-radius: 50%;
+    margin: 0 auto;
+    overflow: hidden;
+}
+
+.profile-img {
+    width: 8rem;
+    height: 8rem;
+    border-radius: 50%;
+    transition: all .3s;
+
+}
+
+.profile-img-span:hover .profile-img {
+    transform: scale(1.5);
+}
+
+.left-ul li:not(:first-child):hover {
+    background: linear-gradient(to right, var(--color-green-light), var(--color-green-dark));
+
+}
+
+.left-ul li:hover a {
+    color: var(--color-white);
+}
+
