--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -259,3 +259,51 @@ body {
     color: var(--color-white);
 }
 
+#right-area {
+    width: 80%;
+}
+
+.messages {
+    width: 100%;
+    height: 75vh;
+    padding: 2rem;
+    overflow-x: hidden;
+    overflow-y: scroll;
+}
+
+.left-message {
+    display: flex;
+    width: 50%;
+}
+
+.sender-img-block {
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
+    position: relative;
+}
+
+.online-icon {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 1.2rem;
+    height: 1.2rem;
+    background-color: var(--color-green-dark);
+    display: block;
+    border-radius: 50%;
+    border:2px solid var(--color-white);
+}
+
+.offline-icon {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 1.2rem;
+    height: 1.2rem;
+    background-color: red;
+    display: block;
+    border-radius: 50%;
+    border:2px solid var(--color-white);
+}
+
