--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -495,3 +495,47 @@ body {
     width: 35%;
 }
 
+.custom-bars {
+    position: absolute;
+    float: right;
+    font-size: 1.8rem;
+    color: var(--color-white);
+    right: 3rem;
+    top: 33%
+}
+
+.custom-bars:hover {
+    cursor: pointer;
+}
+
+.bars {
+    display: none;
+}
+
+
+/* FORM ERRORS */
+.error {
+    color: red;
+    text-align: left;
+    font-size: 1.2rem;
+    margin-top: 5px;
+}
+
+
+/* ALERT DESIGN */
+.alert {
+    width: 100%;
+    height: 3.5rem;
+    line-height: 3.5rem;
+    border-radius: 4px;
+    margin-bottom: 1.5rem;
+    text-align: left;
+    padding: 0 1rem;
+    font-size: 1.2rem;
+}
+
+.alert-success {
+    background-color: var(--color-green);
+    color: var(--color-white);
+}
+
