--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -539,3 +539,51 @@ body {
     color: var(--color-white);
 }
 
+
+/* FLASH MESSAGE */
+.flash {
+    position: fixed;
+    top: 30%;
+    left: 30%;
+    width: 40rem;
+    height: auto;
+    background-color: var(--color-white);
+    padding: 1.5rem;
+    box-shadow: 0 0 1rem rgba(0,0,0,0.5);
+    z-index: 9999;
+    border-radius: 3px;
+    z-index: 999999999999999;
+}
+
+.success-flash {
+    color: var(--color-green);
+}
+
+.flash-heading {
+    font-size: 1.2rem;
+    font-weight: 300;
+    text-transform: uppercase;
+}
+
+.checked {
+    display: inline-block;
+    width: 3rem;
+    height: 3rem;
+    line-height: 3rem;
+    text-align: center;
+    border: 1px solid var(--color-green);
+    border-radius: 50%;
+    margin-right: 1rem;
+}
+
+.cross {
+    display: inline-block;
+    width: 3rem;
+    height: 3rem;
+    line-height: 3rem;
+    text-align: center;
+    border: 1px solid var(--red-color);
+    border-radius: 50%;
+    margin-right: 1rem;
+}
+
