--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -587,3 +587,56 @@ body {
     margin-right: 1rem;
 }
 
+.flash-body p {
+    margin-top: 5px;
+    margin-left: 3.8rem;
+    font-size: 1.2rem;
+}
+
+.remove {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    font-size: 1.8rem;
+    color: silver;
+    font-weight: 500;
+}
+
+.remove:hover {
+    cursor: pointer;
+}
+
+.error-flash {
+    color: var(--red-color);
+    top: 50%;
+}
+
+.change-img {
+    display: none;
+}
+
+#change-img-label {
+    width: 100%;
+    height: 4rem;
+    line-height: 4rem;
+    border:1px solid var(--color-green);
+    border-radius: 3px;
+    display: block;
+    position: relative;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    overflow: hidden;
+}
+
+#change-image-label::after {
+    position: absolute;
+    content: "Choose image";
+    right: 0;
+    top: 0;
+    width:11rem;
+    height: 100%;
+    background-color: var(--color-green);
+    color: var(--color-white);
+    text-align: center;
+    font-size: 1.2rem;
+}
