--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -640,3 +640,44 @@ body {
     text-align: center;
     font-size: 1.2rem;
 }
+
+#change-image-label:hover {
+    cursor: pointer;
+}
+
+.files-error {
+    position: fixed;
+    width: 0;
+    height: 5rem;
+    line-height: 5.3rem;
+    text-transform: uppercase;
+    text-align: left;
+    padding: 0 2rem;
+    font-size: 1.3rem;
+    background-color: var(--red-color);
+    color: var(--color-white);
+    bottom: 15vh;
+    opacity: 0;
+    transition: all 1s;
+}
+
+.show-file-error {
+    opacity: 1;
+    width: 100%;
+}
+
+.files-cross-icon {
+    width: 3rem;
+    height: 3rem;
+    line-height: 3rem;
+    margin-right: 3rem;
+    display: inline-block;
+    text-align: center;
+    border-radius: 50%;
+    border: 1px solid var(--color-white);
+}
+
+.all-files {
+    text-decoration: none;
+    color: var(--color-green);
+}
