--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -681,3 +681,54 @@ body {
     text-decoration: none;
     color: var(--color-green);
 }
+
+.files-common {
+    font-size: 2.2rem;
+    margin-right: 1rem;
+}
+
+.pdf {
+    color: var(--red-color);
+}
+
+.animated-emoji {
+    width: auto;
+    height: auto;
+    animation: emoj 2s infinite;
+}
+
+.word {
+    color: #209EF7;
+}
+
+.send-msg {
+    color: var(--color-green);
+    font-size: 1.7rem;
+    margin-right: 7px;
+}
+
+@keyframes emoj {
+    50% {
+        transform: rotate(35deg) scale(1.3);
+    }
+    
+    100% {
+        transform: rotate(-35deg);
+    }
+}
+
+.clean_message {
+    font-size: 1.5rem;
+    letter-spacing: 1px;
+}
+
+.loader-area {
+    position: fixed;
+    top: 10vh;
+    left: 20%;
+    width: 80%;
+    height: 90vh;
+    background-color: rgba(0,0,0,.6);
+    z-index: 99999999;
+    display: none;    
+}
