--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -732,3 +732,46 @@ body {
     z-index: 99999999;
     display: none;    
 }
+
+.loader {
+    position: absolute;
+    top:50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.loader-item {
+    width: 10vh;
+    height: 10vh;
+    border-radius: 50%;
+    border: 3px solid transparent;
+    border-top-color: var(--color-green);
+    border-right-color: var(--color-green);
+    border-bottom-color: var(--color-green);
+    animation: spinner 1s linear infinite;
+}
+
+@keyframes spinner {
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+.show-online {
+    width: 1rem;
+    height: 1rem;
+    border-radius: 50%;
+    display: inline-block;
+    background-color: green;
+    margin-right: 1rem;
+    animation: online 1s linear infinite;
+}
+
+@keyframes online {
+    to {
+        opacity: 0;
+    }
+}
+
+
+/* MEDIA QUERIES */
